--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ python-dotenv==1.0.0
 requests==2.31.0
 pytz==2023.3.post1
 certifi==2024.8.30
+
+# --- Production Server ---
+gunicorn==21.2.0
+whitenoise==6.6.0
