--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,8 @@ joblib==1.3.2
 pandas==2.1.4
 
 # --- APIs (optional) ---
-openai==1.3.7
-google-cloud-vision==3.5.0
+# openai==1.3.7
+# google-cloud-vision==3.5.0
 
 # --- Utilities ---
 python-decouple==3.8
